microsoft-service-bus/2.1/modules/ROOT/pages/ms-service-bus-connector-reference.adoc
= Microsoft Service Bus Connector Reference - Mule 4
:page-aliases: connectors::ms-dynamics/ms-service-bus-connector-reference.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

Microsoft Service Bus Connector v2.1

Release Notes: xref:release-notes::connector/ms-service-bus-connector-release-notes-mule-4.adoc[Microsoft Service Bus Connector Release Notes]

== Configurations
---
[[config]]
=== Default Configuration


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<config_shared-access-signature, Shared Access Signature>>
* <<config_username-password, Username Password>>
* <<config_windows, Windows>>
 | The connection types to provide to this configuration. | | x
| Encoding a| String |  The default encoding of the Message body to use if the message doesn't communicate it |  |
| Content Type a| String |  The default contentType of the Message body to use if the message doesn't communicate it |  `/` |
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before the runtime considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. The runtime purges the instances when it sees fit. |  |
| Ack Mode a| Enumeration, one of:

** IMMEDIATE
** AUTO
** MANUAL
** DUPS_OK |  The org.mule.jms.commons.api.config.ConsumerAckMode to use when consuming a Message. This setting can be overridden at the message source level. This attribute has to be IMMEDIATE if transactionType is LOCAL or MULTI |  AUTO |
| Consumer Type a| One of:

* <<topic-consumer>>
* <<ServiceBusQueueConsumer>> |  The ConsumerType to use by default when consuming a Message. This setting can be overridden at the message source level. |  |
| Persistent Delivery a| Boolean |  Sets the default value for the Message#getJMSDeliveryMode. If true, the DeliveryMode#PERSISTENT mode will be used, which instructs the JMS provider to take extra care to insure the message is not lost in transit due to a JMS provider failure. |  false |
| Priority a| Number |  Defines the default Message#getJMSPriority to use when sending messages |  4 |
| Time To Live a| Number |  Defines the default time the message is in the broker before it expires and is discarded |  0 |
| Time To Live Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A TimeUnit which qualifies the #timeToLive attribute.  Defaults to MILLISECONDS |  MILLISECONDS |
| Disable Message Id a| Boolean |  Defines the default value to use when producing messages, for disabling the Message#getJMSMessageID generation in the broker. Depending on the provider it may or may not have effect |  false |
| Disable Message Timestamp a| Boolean |  Defines the default value to use, when producing messages, for disable Message#getJMSTimestamp generation in the broker. Depending on the provider it may or may not have effect. |  false |
| Delivery Delay a| Number |  This is used to determine the Message delivery delay time which is calculated by adding the deliveryDelay value specified on the send method to the time the message was sent.  Only used in JMS_2_0 |  |
| Delivery Delay Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A TimeUnit which qualifies the #deliveryDelay attribute.  Defaults to MILLISECONDS |  MILLISECONDS |
| Jms Type a| String |  A message JMSType identifier supplied by a client when a message is sent. |  |
|===

==== Connection Types
[[config_shared-access-signature]]
===== Shared Access Signature (Deprecated)

====== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Skip connectivity test a| Boolean |  (Optional) Skips the connectivity test at connector startup (use this if your access policy is restricted). |  false |
| Max Connections a| Number |  Maximum number of connections to keep in pool for the producer to reuse. If set to `-1`, a new connection is created every time. |  -1 |
| Caching Strategy a| One of:

* no-caching
* <<default-caching>> |  The strategy to use for caching sessions and connections |  |
| Service Namespace a| String |  |  | x
| Storage Account Name a| String |  (Optional) The account name of the Blob Storage to use to store large messages. |  |
| Storage Access Key a| String |  (Optional) The account key of the Blob Storage to use to store large messages. |  |
| Container Name a| String |  (Optional) The container name in the Blob Storage to use to store large messages. If this parameter is not provided, a default container is created. |  |
| Shared Access Signature a| String |  |  |
| SAS tokens provider a| SharedAccessSignatureProvider |  Provider instance that will provide SAS tokens when required. |  |
| SAS tokens list a| Array of String |  List of SAS tokens to use when required. |  |
| Max redeliveries a| Number |  Controls when an incoming message is rejected based on the number of times it was redelivered. The default value is -1 (disabled). A value of `0` means that no message redeliveries are accepted. A value of `5` means that a message is redelivered five times, and so forth. |  -1 |
| Outcome a| Enumeration, one of:

** ACCEPTED
** REJECTED
** RELEASED
** MODIFIED_FAILED
** MODIFIED_FAILED_UNDELIVERABLE |  Controls the outcome that is applied to a message that is being rejected due to it having exceeded the configured maxRedeliveries value. |  MODIFIED_FAILED_UNDELIVERABLE |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. | `true` |
|===
[[config_username-password]]
===== Username Password (Deprecated)


====== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Skip connectivity test a| Boolean |  (Optional) Skips the connectivity test at connector startup (use this if your access policy is restricted). |  false |
| Max Connections a| Number |  Maximum number of connections to keep in pool for the producer to reuse. If set to `-1`, a new connection is created every time.  |  -1 |
| Caching Strategy a| One of:

* no-caching
* <<default-caching>> |  The strategy to use for caching sessions and connections |  |
| Service Namespace a| String |  |  | x
| Storage Account Name a| String | (Optional) The account name of the Blob Storage to use to store large messages |  |
| Storage Access Key a| String | (Optional) The account key of the Blob Storage to use to store large messages. |  |
| Container Name a| String |  (Optional) The container name in the Blob Storage to use to store large messages. If this parameter is not provided, a default container is created. |  |
| Shared Access Key Name a| String |  |  | x
| Shared Access Key a| String |  |  | x
| Max redeliveries a| Number |  Controls when an incoming message is rejected based on the number of times it was redelivered. The default value is -1 (disabled). A value of `0` means that no message redeliveries are accepted. A value of `5` means that a message is redelivered five times, and so forth. |  -1 |
| Outcome a| Enumeration, one of:

** ACCEPTED
** REJECTED
** RELEASED
** MODIFIED_FAILED
** MODIFIED_FAILED_UNDELIVERABLE |  Controls the outcome that is applied to a message that is being rejected due to it having exceeded the configured maxRedeliveries value |  MODIFIED_FAILED_UNDELIVERABLE |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy.  | `true` |
|===
[[config_windows]]
===== Windows


====== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Skip connectivity test a| Boolean |  (Optional) Skips the connectivity test at connector startup (use this if your access policy is restricted). |  false |
| Max Connections a| Number |  Maximum number of connections to keep in pool for the producer to reuse. If set to `-1`, a new connection is created every time. |  -1 |
| Caching Strategy a| One of:

* no-caching
* <<default-caching>> |  The strategy to use for caching sessions and connections |  |
| Service Namespace a| String |  |  | x
| Username a| String |  |  | x
| Password a| String |  |  | x
| Fully Qualified Domain Name a| String |  |  | x
| Port a| String |  |  9355 |
| Disable SSL certificate validation a| Boolean |  |  false |
| Idle timeout a| Number |  The idle timeout in milliseconds after which the connection will be failed if the peer sends no AMQP frames. |  60000 |
| Max redeliveries a| Number |  Controls when an incoming message is rejected based on the number of times it was redelivered. The default value is -1 (disabled). A value of `0` means that no message redeliveries are accepted. A value of `5` means that a message is redelivered five times, and so forth. |  -1 |
| Outcome a| Enumeration, one of:

** ACCEPTED
** REJECTED
** RELEASED
** MODIFIED_FAILED
** MODIFIED_FAILED_UNDELIVERABLE |  Controls the outcome that is applied to a message that is being rejected due to it having exceeded the configured maxRedeliveries value. |  MODIFIED_FAILED_UNDELIVERABLE |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy.  | `true` |
|===

== Operations

* <<ack>>
* <<queueCreate>>
* <<queueDelete>>
* <<queueGet>>
* <<queueSend>>
* <<queueUpdate>>
* <<queues>>
* <<recoverSession>>
* <<ruleCreate>>
* <<ruleDelete>>
* <<ruleGet>>
* <<ruleUpdate>>
* <<rules>>
* <<subscriptionCreate>>
* <<subscriptionDelete>>
* <<subscriptionGet>>
* <<subscriptionUpdate>>
* <<subscriptions>>
* <<topicCreate>>
* <<topicDelete>>
* <<topicGet>>
* <<topicSend>>
* <<topicUpdate>>
* <<topics>>

=== Associated Sources

* <<listener>>




[[ack]]
=== Ack
`<servicebus:ack>`


Allows the user to perform an ACK when the JmsAckMode#MANUAL mode is elected while consuming the Message. As per JMS Spec, performing an ACK over a single Message automatically works as an ACK for all the Messages produced in the same JmsSession.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Ack Id a| String |  The AckId of the Message to ACK |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[queueCreate]]
=== Queue Create
`<servicebus:queue-create>`


Creates a queue in the service bus instance


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Queue Path a| String |  The name of the queue |  | x
| Queue Description a| <<ServiceBusQueueDescription>> |  An InternalQueueDescription object containing the desired values of the queue's properties that will be created |  `#[payload]` |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<ServiceBusQueue>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[queueDelete]]
=== Queue Delete
`<servicebus:queue-delete>`


Deletes the specified queue in the service bus instance


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Queue Path a| String |  The name of the queue |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[queueGet]]
=== Queue Get
`<servicebus:queue-get>`


Retrieves the specified queue from the service bus instance


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Queue Path a| String |  The name of the queue |  `#[payload]` |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<ServiceBusQueue>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[queueSend]]
=== Queue Send
`<servicebus:queue-send>`


Sends a message to a Queue


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Destination Queue a| String |  The name of the queue. |  | x
| Transactional Action a| Enumeration, one of:

** ALWAYS_JOIN
** JOIN_IF_POSSIBLE
** NOT_SUPPORTED |  Type of transactional action. |  NOT_SUPPORTED |
| Send Correlation Id a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Correlation strategy id for operation. |  AUTO |
| Body a| Any |  The body of the Message |  `#[payload]` |
| JMS Type a| String |  The JMSType identifier header of the Message |  |
| Correlation ID a| String |  The JMSCorrelationID header of the Message |  |
| Send Content Type a| Boolean |  Whether or not the body content type should be sent as a property |  true |
| Content Type a| String |  The content type of the message's body |  |
| Send Encoding a| Boolean |  Whether or not the body outboundEncoding should be sent as a Message property |  true |
| Encoding a| String |  The encoding of the message's body |  |
| Reply To a| <<ServiceBusJmsDestination>> |  The destination where a reply to this Message should be sent |  |
| User Properties a| Object |  The custom user properties to set for this message |  |
| JMSX Properties a| <<JmsxProperties>> |  The JMSX properties to set for this message |  |
| Persistent Delivery a| Boolean |  If true, the Message is sent using the PERSISTENT JMSDeliveryMode. |  |
| Priority a| Number |  The default JMSPriority value to use when sending the message. |  |
| Time To Live a| Number |  Defines the default time the message is in the broker before it expires and is discarded. |  |
| Time To Live Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the timeToLive configurations. |  |
| Disable Message Id a| Boolean |  If true, the Message is flagged to avoid generating its MessageID. |  |
| Disable Message Timestamp a| Boolean |  If true, the Message is flagged to avoid generating its sent Timestamp. |  |
| Delivery Delay a| Number |  Only used by JMS 2.0. Sets the delivery delay to apply to postpone the message delivery. |  |
| Delivery Delay Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the deliveryDelay configurations. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[queueUpdate]]
=== Queue Update
`<servicebus:queue-update>`


Updates the specified queue in the service bus instance


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Queue Path a| String |  The name of the queue |  | x
| Queue Description a| <<ServiceBusQueueDescription>> |  An InternalQueueDescription oject containing the desired values of the queue's properties that will be updated |  `#[payload]` |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<ServiceBusQueue>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[queues]]
=== Queues
`<servicebus:queues>`


Retrieves all existing queues from the service bus instance


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of <<ServiceBusQueue>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[recoverSession]]
=== Recover Session
`<servicebus:recover-session>`


Allows the user to perform a session recover when the JmsAckMode#MANUAL mode is elected while consuming the Message. As per JMS Spec, performing a session recover automatically redelivers all the consumed messages that had not being acknowledged before this recover.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Ack Id a| String |  The AckId of the Message Session to recover |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[ruleCreate]]
=== Rule Create
`<servicebus:rule-create>`


Creates a rule for the specified topic and subscription

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| Rule Path a| String |  The name of the rule to create |  | x
| Rule Description a| <<ServiceBusRuleDescription>> |  An InternalRuleDescription object containing the desired values of the new rule's properties |  `#[payload]` |
| Topic Path a| String | The name of the topic that contains the subscription for which to create a rule  |  | x
| Subscription Path a| String | The name of the subscription that contains the new rule  |  |
| Target Variable a| String |  The name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<ServiceBusRule>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[ruleDelete]]
=== Rule Delete
`<servicebus:rule-delete>`


Deletes a rule from the specified topic and subscription

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| Topic Path a| String | The name of the topic that contains the subscription from which to delete the rule |  | x
| Subscription Path a| String | The name of the subscription from which to delete the rule |  | x
| Rule Path a| String | The name of the rule to delete |  | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[ruleGet]]
=== Rule Get
`<servicebus:rule-get>`


Retrieves a rule from the specified topic and subscription

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| Topic Path a| String | The name of the topic that contains the subscription from which to retrieve the rule || x
| Subscription Path a| String | The name of the subscription from which to retrieve the rule |  | x
| Rule Path a| String | The name of the rule to retrieve |  | x
| Target Variable a| String |  The name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<ServiceBusRule>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[ruleUpdate]]
=== Rule Update
`<servicebus:rule-update>`


Updates a rule from the specified topic and subscription

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| Rule Description a| <<ServiceBusRuleDescription>> |  An InternalRuleDescription object containing the desired values for the rule's updated properties |  `#[payload]` |
| Topic Path a| String | The name of the topic that contains the subscription for which to update the rule |  | x
| Subscription Path a| String | The name of the subscription for which to update the rule |  | x
| Rule Path a| String | The name of the rule to update |  | x
| Target Variable a| String |  The name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<ServiceBusRule>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[rules]]
=== Rules
`<servicebus:rules>`


Retrieves all rules from the specified topic and subscription

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| Topic Path a| String | The name of the topic that contains the subscription from which to retrieve all rules |  | x
| Subscription Path a| String | The name of the subscription from which to retrieve all rules |  |
| Target Variable a| String |  The name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of <<ServiceBusRule>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[subscriptionCreate]]
=== Subscription Create
`<servicebus:subscription-create>`


Creates a subscription in the specified topic


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| Topic Path a| String |  The name of the topic to contain the new subscription |  | x
| Subscription Path a| String |  The name of the subscription to create |  | x
| Subscription Description a| <<ServiceBusSubscriptionDescription>> |  An InternalSubscriptionDescription object containing the desired values of the new subscription's properties |  `#[payload]` |
| Target Variable a| String |  The name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<ServiceBusSubscription>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[subscriptionDelete]]
=== Subscription Delete
`<servicebus:subscription-delete>`


Deletes a subscription from the specified topic

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| Topic Path a| String | The name of the topic from which to delete the subscription |  | x
| Subscription Path a| String | The name of the subscription to delete |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[subscriptionGet]]
=== Subscription Get
`<servicebus:subscription-get>`


Retrieves a subscription from the specified topic


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use
 | | x
| Topic Path a| String | The name of the topic from which to retrieve the subscription
 |  | x
| Subscription Path a| String | The name of the subscription to retrieve |  |
| Target Variable a| String |  The name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<ServiceBusSubscription>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[subscriptionUpdate]]
=== Subscription Update
`<servicebus:subscription-update>`


Updates a subscription from the specified topic


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| Subscription Description a| <<ServiceBusSubscriptionDescription>> |  An InternalSubscriptionDescription object containing the desired values of the subscription's updated properties|  `#[payload]` |
| Topic Path a| String | The name of the topic from which to update the subscription |  | x
| Subscription Path a| String | The name of the subscription to update |  |
| Target Variable a| String |  The name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<ServiceBusSubscription>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[subscriptions]]
=== Subscriptions
`<servicebus:subscriptions>`


Retrieves all subscriptions from the specified topic

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| Topic Path a| String |  The name of the topic from which to retrieve all subscriptions |  `#[payload]` |
| Target Variable a| String |  The name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of <<ServiceBusSubscription>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[topicCreate]]
=== Topic Create
`<servicebus:topic-create>`


Creates a topic in the service bus instance


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Topic Path a| String |  The name of the topic |  | x
| Topic Description a| <<ServiceBusTopicDescription>> |  An InternalTopicDescription object containing the desired values of the topic's properties that will be created. |  `#[payload]` |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<ServiceBusTopic>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[topicDelete]]
=== Topic Delete
`<servicebus:topic-delete>`


Deletes the specified topic from the service bus instance


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Topic Path a| String |  The name of the topic |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[topicGet]]
=== Topic Get
`<servicebus:topic-get>`


Retrieves the specified topic from the service bus instance


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Topic Path a| String |  The name of the topic |  `#[payload]` |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<ServiceBusTopic>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[topicSend]]
=== Topic Send
`<servicebus:topic-send>`


Sends a message to a Topic


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Destination Topic a| String |  The name of the topic. |  | x
| Transactional Action a| Enumeration, one of:

** ALWAYS_JOIN
** JOIN_IF_POSSIBLE
** NOT_SUPPORTED |  Type of transactional action. |  | x
| Send Correlation Id a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Correlation strategy id for operation. |  | x
| Body a| Any |  The body of the Message |  `#[payload]` |
| JMS Type a| String |  The JMSType identifier header of the Message |  |
| Correlation ID a| String |  The JMSCorrelationID header of the Message |  |
| Send Content Type a| Boolean |  Whether or not the body content type should be sent as a property |  true |
| Content Type a| String |  The content type of the message's body |  |
| Send Encoding a| Boolean |  Whether or not the body outboundEncoding should be sent as a Message property |  true |
| Encoding a| String |  The encoding of the message's body |  |
| Reply To a| <<ServiceBusJmsDestination>> |  The destination where a reply to this Message should be sent |  |
| User Properties a| Object |  The custom user properties to set for this message |  |
| JMSX Properties a| <<JmsxProperties>> |  The JMSX properties to set for this message |  |
| Persistent Delivery a| Boolean |  If true, the Message is sent using the PERSISTENT JMSDeliveryMode. |  |
| Priority a| Number |  The default JMSPriority value to use when sending the message. |  |
| Time To Live a| Number |  Defines the default time the message is in the broker before it expires and is discarded. |  |
| Time To Live Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the timeToLive configurations. |  |
| Disable Message Id a| Boolean |  If true, the Message is flagged to avoid generating its MessageID. |  |
| Disable Message Timestamp a| Boolean |  If true, the Message is flagged to avoid generating its sent Timestamp. |  |
| Delivery Delay a| Number |  Only used by JMS 2.0. Sets the delivery delay to apply to postpone the message delivery. |  |
| Delivery Delay Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the deliveryDelay configurations. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[topicUpdate]]
=== Topic Update
`<servicebus:topic-update>`


Updates the specified topic from the service bus instance


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Topic Path a| String |  The name of the topic |  | x
| Topic Description a| <<ServiceBusTopicDescription>> |  An InternalTopicDescription object containing the desired values of the topic's properties that will be updated. |  `#[payload]` |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<ServiceBusTopic>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[topics]]
=== Topics
`<servicebus:topics>`


Retrieves all existing topics from the service bus instance


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of <<ServiceBusTopic>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


== Sources

[[listener]]
=== Listener
`<servicebus:listener>`


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Ack Mode a| Enumeration, one of:

** IMMEDIATE
** AUTO
** MANUAL
** DUPS_OK |  The Session ACK mode to use when consuming a message |  |
| Number Of Consumers a| Number |  The number of concurrent consumers to use to receive JMS Messages |  1 |
| Primary Node Only a| Boolean |  Whether this source should be executed only on the primary node when running in a cluster |  |
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message |  |
| Source Type a| String |  |  | x
| Destination a| String |  |  | x
| Subscription a| String |  |  | x
| Content Type a| String |  |  |
| Encoding a| String |  |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
| Body a| Any |  The body of the Message |  `#[payload]` |
| JMS Type a| String |  The JMSType identifier header of the Message |  |
| Correlation ID a| String |  The JMSCorrelationID header of the Message |  |
| Send Content Type a| Boolean |  Whether or not the body content type should be sent as a property |  true |
| Content Type a| String |  The content type of the message's body |  |
| Send Encoding a| Boolean |  Whether or not the body outboundEncoding should be sent as a Message property |  true |
| Encoding a| String |  The encoding of the message's body |  |
| Reply To a| <<ServiceBusJmsDestination>> |  The destination where a reply to this Message should be sent |  |
| User Properties a| Object |  The custom user properties to set for this message |  |
| JMSX Properties a| <<JmsxProperties>> |  The JMSX properties to set for this message |  |
| Persistent Delivery a| Boolean |  Whether or not the delivery should be done with a persistent configuration |  |
| Priority a| Number |  The default JMSPriority value to use when sending the message |  |
| Time To Live a| Number |  Defines the default time the message is in the broker before it expires and is discarded |  |
| Time To Live Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the timeToLive configurations |  |
| Disable Message Id a| Boolean |  If true, the Message is flagged to avoid generating its MessageID |  |
| Disable Message Timestamp a| Boolean |  If true, the Message is flagged to avoid generating its sent Timestamp |  |
| Delivery Delay a| Number |  Only used by JMS 2.0. Sets the delivery delay to apply to postpone the message delivery. |  |
| Delivery Delay Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the deliveryDelay configurations |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Message
| Attributes Type a| <<ServiceBusJmsAttributes>>
|===

=== For Configurations
* <<config>>



== Types
[[Reconnection]]
=== Reconnection

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use. |  |
|===

[[reconnect]]
=== Reconnect

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| Count a| Number | How many reconnection attempts to make. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  |
|===

[[ServiceBusJmsAttributes]]
=== Service Bus JMS Attributes

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Properties a| <<JmsMessageProperties>> |  |  | x
| Headers a| <<JmsHeaders>> |  |  | x
| Ack Id a| String |  |  |
|===

[[JmsMessageProperties]]
=== JMS Message Properties

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| All a| Object |  |  | x
| User Properties a| Object |  |  | x
| Jms Properties a| Object |  |  | x
| Jmsx Properties a| <<JmsxProperties>> |  |  | x
|===

[[JmsxProperties]]
=== JMSX Properties

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Jmsx User ID a| String |  |  |
| Jmsx App ID a| String |  |  |
| Jmsx Delivery Count a| Number |  |  |
| Jmsx Group ID a| String |  |  |
| Jmsx Group Seq a| Number |  |  |
| Jmsx Producer TXID a| String |  |  |
| Jmsx Consumer TXID a| String |  |  |
| Jmsx Rcv Timestamp a| Number |  |  |
|===

[[JmsHeaders]]
=== JMS Headers

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Destination a| <<ServiceBusJmsDestination>> |  |  | x
| Delivery Mode a| Number |  |  | x
| Expiration a| Number |  |  | x
| Priority a| Number |  |  | x
| Message Id a| String |  |  |
| Timestamp a| Number |  |  | x
| Correlation Id a| String |  |  |
| Reply To a| <<ServiceBusJmsDestination>> |  |  |
| Type a| String |  |  | x
| Redelivered a| Boolean |  | false |
| Delivery Time a| Number |  |  |
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | The maximum number of times a message can be redelivered and processed unsuccessfully before triggering process-failed-message |  |
| Use Secure Hash a| Boolean | Whether to use a secure hash algorithm to identify a redelivered message. |  |
| Message Digest Algorithm a| String | The secure hashing algorithm to use. | SHA-256 |
| Id Expression a| String | Defines one or more expressions used to determine when a message has been redelivered. This property can be set only when useSecureHash is false. |  |
| Object Store a| Object Store | The object store where the redelivery counter for each message is going to be stored. |  |
|===

[[ServiceBusJmsDestination]]
=== Service Bus JMS Destination

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Destination a| String |  |  | x
| Destination Type a| Enumeration, one of:

** QUEUE
** TOPIC |  | QUEUE |
|===

[[ServiceBusQueue]]
=== Service Bus Queue

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Author a| String |  |  |
| Id a| String |  |  |
| Link a| String |  |  |
| Published a| Date |  |  |
| Queue Description a| <<ServiceBusQueueDescription>> |  |  |
| Title a| String |  |  |
| Updated a| Date |  |  |
|===

[[ServiceBusQueueDescription]]
=== Service Bus Queue Description

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Lock Duration a| String | Determines the amount of time in seconds in which a message should be locked for processing by a receiver. After this period, the message is unlocked and available for
 consumption by the next receiver. Settable only at queue creation time. Valid values: Range: 0 - 5 minutes. 0 means that the message is not locked. Format: PTx3Mx4S, where
 x1 number of days, x2 number of hours, x3 number of minutes, x4 number of seconds (Examples: PT5M (5 minutes), PT1M30S (1 minute, 30 seconds)). | PT1M |
| Max Size In Megabytes a| Number | Specifies the maximum queue size in megabytes. Any attempt to enqueue a message that will cause the queue to exceed this value fails. Valid values are: 1024, 2048, 3072, 4096, 5120 | 1024 |
| Requires Duplicate Detection a| Boolean | Settable only at queue creation time. | false |
| Requires Session a| Boolean | Settable only at queue creation time. If set to true, the queue will be session-aware and only SessionReceiver will be supported. Session-aware queues are not supported
 through REST. | false |
| Dead Lettering On Message Expiration a| Boolean | This field controls how the Service Bus handles a message with an expired TTL. If it is enabled and a message expires, Service Bus moves the message from the queue into the
 queue's dead-letter sub-queue. If disabled, message is permanently deleted from the queue. Settable only at queue creation time. | false |
| Enable Batched Operations a| Boolean | Enables or disables service-side batching behavior when performing operations for the specific queue. When enabled, Service Bus collects/batches multiple operations to the
 back end, to be more efficient with the connection. If you want lower operation latency, you can disable this feature. | true |
| Default Message Time To Live a| String | Depending on whether DeadLettering is enabled, a message is automatically moved to the DeadLetterQueue or deleted if it has been stored in the queue for longer than the
 specified time. This value is overwritten by a TTL specified on the message if and only if the message TTL is smaller than the TTL set on the queue. This value is immutable
 after the queue has been created. Format: Px1DTx2Hx3Mx4S, where x1 number of days, x2 number of hours, x3 number of minutes, x4 number of seconds (Examples: PT10M (10 minutes), P1DT2H (1 day, 2 hours) | P10675199DT2H48M5.4775807S |
| Duplicate Detection History Time Window a| String | Specifies the time span during which Service Bus detects message duplication Valid values: Range: 1 second - 7 days. Format: Px1DTx2Hx3Mx4S, where x1 number of days, x2
 number of hours, x3 number of minutes, x4 number of seconds (Examples: PT10M (10 minutes), P1DT2H (1 day, 2 hours)). | PT10M |
| Max Delivery Count a| Number | The maximum number of times Service Bus tries to deliver a message before being dead-lettered or discarded. | 10 |
|===

[[ServiceBusRule]]
=== Service Bus Rule

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Id a| String |  |  |
| Link a| String |  |  |
| Published a| Date |  |  |
| Rule Description a| <<ServiceBusRuleDescription>> |  |  |
| Title a| String |  |  |
| Updated a| Date |  |  |
|===

[[ServiceBusRuleDescription]]
=== Service Bus Rule Description

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Action a| <<ServiceBusRuleAction>> | The action that the rule performs |  |
| Filter a| <<ServiceBusRuleFilter>> | The filter for the associated subscription |  |
|===

[[ServiceBusRuleAction]]
=== Service Bus Rule Action

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Sql Expression a| String | The SQL expression for the action to perform |  |
| Type a| Enumeration, one of:

** SqlRuleAction
** EmptyRuleAction |  |  |
|===

[[ServiceBusRuleFilter]]
=== Service Bus Rule Filter

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Correlation Id a| String | The ID to match if this filter is a correlation filter |  |
| Sql Expression a| String | The SQL expression for the action to perform |  |
| Type a| Enumeration, one of:

** SqlFilter
** TrueFilter
** FalseFilter
** CorrelationFilter |  |  |
|===

[[ServiceBusSubscription]]
=== Service Bus Subscription

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Id a| String |  |  |
| Link a| String |  |  |
| Published a| Date |  |  |
| Subscription Description a| <<ServiceBusSubscriptionDescription>> |  |  |
| Title a| String |  |  |
| Updated a| Date |  |  |
|===

[[ServiceBusSubscriptionDescription]]
=== Service Bus Subscription Description

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Lock Duration a| String | The default lock duration is applied to subscriptions that do not define a lock duration. You can only set this property at subscription creation time. Valid values: Range:
 0 - 5 minutes. 0 means that the message is not locked. Format: PTx3Mx4S, where x1 number of days, x2 number of hours, x3 number of minutes, x4 number of seconds (Examples:
 PT5M (5 minutes), PT1M30S (1 minute, 30 seconds)). | PT1M |
| Requires Session a| Boolean | You can only set this property at subscription creation time. If set to true, the subscription will be session-aware and only SessionReceiver will be supported.
 Session-aware subscriptions are not supported through REST. | false |
| Dead Lettering On Message Expiration a| Boolean | This field controls how Service Bus handles a message with an expired TTL. If it is enabled and a message expires, Service Bus moves the message from the queue into the
 subscription's dead-letter sub-queue. If disabled, message is permanently deleted from the subscription's main queue. Settable only at subscription creation time. | false |
| Dead Lettering On Filter Evaluation Exceptions a| Boolean | Determines how Service Bus handles a message that causes an exception during a subscription's filter evaluation. If the value is set to true, the message that caused the
 exception is moved to the subscription's dead-letter queue. Otherwise, it is discarded. By default, this parameter is set to true, enabling you to investigate the cause of
 the exception. It can occur from a malformed message or some incorrect assumptions being made in the filter about the form of the message. Settable only at subscription
 creation time. | false |
| Enable Batched Operations a| Boolean | Enables or disables service-side batching behavior when performing operations for the specific queue. When enabled, Service Bus will collect/batch multiple operations to the
 backend to be more connection efficient. If you want lower operation latency, then you can disable this feature. | false |
| Default Message Time To Live a| String | Determines how long a message lives in the subscription. Based on whether dead-lettering is enabled, a message whose Time To Live (TTL) has expired is either moved to the
 subscription's associated DeadLetterQueue, or permanently deleted. If the topic specifies a smaller TTL than the subscription, the topic TTL is applied. Format:
 Px1DTx2Hx3Mx4S, where x1 number of days, x2 number of hours, x3 number of minutes, x4 number of seconds (Examples: PT10M (10 minutes), P1DT2H (1 day, 2 hours) | P10675199DT2H48M5.4775807S |
| Max Delivery Count a| Number | The maximum number of times Service Bus tries to deliver a message before that message is dead lettered or discarded. | 10 |
|===

[[ServiceBusTopic]]
=== Service Bus Topic

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Author a| String |  |  |
| Id a| String |  |  |
| Link a| String |  |  |
| Published a| Date |  |  |
| Title a| String |  |  |
| Topic Description a| <<ServiceBusTopicDescription>> |  |  |
| Updated a| Date |  |  |
|===

[[ServiceBusTopicDescription]]
=== Service Bus Topic Description

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Size In Megabytes a| Number | Specifies the maximum queue size in megabytes. Any attempt to enqueue a message that will cause the queue to exceed this value fails. Valid values are: 1024, 2048, 3072,
 4096, 5120 | 1024 |
| Requires Duplicate Detection a| Boolean | If enabled, the topic detects duplicate messages within the time span specified by the DuplicateDetectionHistoryTimeWindow property. Settable only at topic creation time. | false |
| Enable Batched Operations a| Boolean | Enables or disables service side batching behavior when performing operations for the specific queue. When enabled, Service Bus collects/batches multiple operations to the
 back end to be more connection efficient. If you want lower operation latency, you can disable this feature. | true |
| Default Message Time To Live a| String | Determines how long a message lives in the associated subscriptions. Subscriptions inherit the TTL from the topic unless they are created explicitly with a smaller TTL.
 Based on whether dead-lettering is enabled, a message whose TTL has expired will either be moved to the subscription's associated DeadLetterQueue or will be permanently
 deleted. Format: Px1DTx2Hx3Mx4S, where x1 number of days, x2 number of hours, x3 number of minutes, x4 number of seconds (Examples: PT10M (10 minutes), P1DT2H (1 day, 2 hours)). | P10675199DT2H48M5.4775807S |
| Duplicate Detection History Time Window a| String | Specifies the time span during which Service Bus detects message duplication Valid values: Range: 1 second - 7 days. Format: Px1DTx2Hx3Mx4S, where x1 number of days, x2
 number of hours, x3 number of minutes, x4 number of seconds (Examples: PT10M (10 minutes), P1DT2H (1 day, 2 hours)). | PT10M |
|===

[[default-caching]]
=== Default Caching

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Session Cache Size a| Number | Number of sessions to cache. |  |
| Cache Producers a| Boolean | true if the ConnectionFactory should cache the MessageProducers | true |
| Cache Consumers a| Boolean | true if the ConnectionFactory should cache the MessageConsumers | true |
|===

[[topic-consumer]]
=== Topic Consumer

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Topic Consumer a| <<topic-consumer>> |  |  | x
| Topic Subscription a| <<TopicSubscription>> |  |  | x
|===

[[TopicSubscription]]
=== Topic Subscription

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Topic Path a| String |  |  | x
| Subscription Path a| String |  |  |
|===

[[ServiceBusQueueConsumer]]
=== Service Bus Queue Consumer

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Queue Consumer a| queue-consumer |  |  |
| Source Queue a| String |  |  |
| Number Of Consumers a| Number | The number of concurrent consumers to use to receive JMS Messages | 4 |
|===

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
