microsoft-service-bus/2.2/modules/ROOT/pages/ms-service-bus-connector-reference.adoc
= Microsoft Service Bus Connector 2.2 Reference - Mule 4
:page-aliases: connectors::ms-service-bus/ms-service-bus-connector-reference.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

Release Notes: xref:release-notes::connector/ms-service-bus-connector-release-notes-mule-4.adoc[Microsoft Service Bus Connector Release Notes]

NOTE: This connector supports connecting only to the Microsoft Windows Service Bus on-premises solution. To connect to Microsoft Azure Service Bus, use https://www.mulesoft.com/exchange/com.mulesoft.connectors/mule-azure-service-bus-connector[Anypoint Connector for Azure Service Bus].

== Configurations
---
[[config]]
=== Default Configuration


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<config_shared-access-signature, Shared Access Signature>>
* <<config_username-password, Username Password>>
* <<config_windows, Windows>>
 | Connection types to provide to this configuration | | x
| Encoding a| String |  Default encoding of the Message body to use if the message doesn't communicate it |  |
| Content Type a| String |  Default contentType of the Message body to use if the message doesn't communicate it |  `/` |
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the instance expires at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
| Ack Mode a| Enumeration, one of:

** IMMEDIATE
** AUTO
** MANUAL
** DUPS_OK |  The `org.mule.jms.commons.api.config.ConsumerAckMode` to use when consuming a message. Override this setting at the message source level. This attribute must be `IMMEDIATE` if `transactionType` is `LOCAL` or `MULTI` |  `AUTO` |
| Consumer Type a| One of:

* <<topic-consumer>>
* <<ServiceBusQueueConsumer>> |  The ConsumerType to use by default when consuming a Message. Override this setting at the message source level. |  |
| Persistent Delivery a| Boolean |  Sets the default value for the Message#getJMSDeliveryMode. If true, the DeliveryMode#PERSISTENT mode is used, which instructs the JMS provider to take extra care to insure the message is not lost in transit due to a JMS provider failure. |  false |
| Priority a| Number |  Defines the default Message#getJMSPriority to use when sending messages |  4 |
| Time To Live a| Number |  Defines the default time the message is in the broker before it expires and is discarded |  0 |
| Time To Live Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A TimeUnit which qualifies the #timeToLive attribute.  Defaults to MILLISECONDS |  MILLISECONDS |
| Disable Message Id a| Boolean |  Defines the default value to use when producing messages, for disabling the Message#getJMSMessageID generation in the broker. Depending on the provider it may or may not have effect |  false |
| Disable Message Timestamp a| Boolean |  Defines the default value to use, when producing messages, for disable Message#getJMSTimestamp generation in the broker. Depending on the provider it may or may not have effect. |  false |
| Delivery Delay a| Number |  Determines the Message delivery delay time which is calculated by adding the deliveryDelay value specified on the send method to the time the message was sent.  Only used in JMS_2_0 |  |
| Delivery Delay Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A TimeUnit which qualifies the #deliveryDelay attribute.  Defaults to MILLISECONDS |  MILLISECONDS |
| Jms Type a| String |  A message JMSType identifier supplied by a client when a message is sent. |  |
|===

==== Connection Types
[[config_shared-access-signature]]
===== Shared Access Signature (Deprecated)

====== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Skip connectivity test a| Boolean |  (Optional) Skips the connectivity test at connector startup (use this if your access policy is restricted). |  false |
| Max Connections a| Number |  Maximum number of connections to keep in pool for the producer to reuse. If set to `-1`, a new connection is created every time. |  -1 |
| Caching Strategy a| One of:

* no-caching
* <<default-caching>> | Strategy to use for caching sessions and connections |  |
| Service Namespace a| String | Namespace for the Azure Service Bus service in your subscription. |  | x
| Storage Account Name a| String |  (Optional) The account name of the Blob Storage to use to store large messages. |  |
| Storage Access Key a| String |  (Optional) The account key of the Blob Storage to use to store large messages. |  |
| Container Name a| String |  (Optional) The container name in the Blob Storage to use to store large messages. If this parameter is not provided, a default container is created. |  |
| Shared Access Signature a| String | Unique security token that sets up one security profile for access to all your service resources. When the token expires, the connector cannot reconnect automatically, so you must stop the flow to update this configuration setting with a new token. |  |
| SAS tokens provider a| SharedAccessSignatureProvider |  Provider instance that provides SAS tokens when required. |  |
| SAS tokens list a| Array of String |  List of SAS tokens to use when required. |  |
| Max redeliveries a| Number |  Controls when an incoming message is rejected based on the number of times it was redelivered. The default value is -1 (disabled). A value of `0` means that no message redeliveries are accepted. A value of `5` means that a message is redelivered five times, and so forth. |  -1 |
| Outcome a| Enumeration, one of:

** ACCEPTED
** REJECTED
** RELEASED
** MODIFIED_FAILED
** MODIFIED_FAILED_UNDELIVERABLE |  Controls the outcome to apply to a message that is rejected due to exceeding the configured maxRedeliveries value. |  MODIFIED_FAILED_UNDELIVERABLE |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. | `true` |
|===
[[config_username-password]]
===== Username Password (Deprecated)


====== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Skip connectivity test a| Boolean |  (Optional) Skips the connectivity test at connector startup (use this if your access policy is restricted). |  false |
| Max Connections a| Number |  Maximum number of connections to keep in pool for the producer to reuse. If set to `-1`, a new connection is created every time.  |  -1 |
| Caching Strategy a| One of:

* no-caching
* <<default-caching>> |  The strategy to use for caching sessions and connections |  |
| Service Namespace a| String | Namespace for the Azure Service Bus service in your subscription. |  | x
| Storage Account Name a| String | (Optional) The account name of the Blob Storage to use to store large messages |  |
| Storage Access Key a| String | (Optional) The account key of the Blob Storage to use to store large messages. |  |
| Container Name a| String |  (Optional) The container name in the Blob Storage to use to store large messages. If this parameter is not provided, a default container is created. |  |
| Shared Access Key Name a| String | Name of the access key configured on the namespace. Any access key created at a lower level, such as a topic level shared key, does not work with this option, unless you disable the connectivity test at startup. |  | x
| Shared Access Key a| String | 256-bit primary key. |  | x
| Proxy a| <<Proxy>> | Points to the <<Proxy>> type. |  |
| Security a| <<Tls>> | Points to the <<Tls>> type. |  |
| Advanced a| <<Advanced>> | Points to the <<Advanced>> type. |  |
| Max redeliveries a| Number |  Controls when an incoming message is rejected based on the number of times it was redelivered. The default value is -1 (disabled). A value of `0` means that no message redeliveries are accepted. A value of `5` means that a message is redelivered five times, and so forth. |  -1 |
| Outcome a| Enumeration, one of:

** ACCEPTED
** REJECTED
** RELEASED
** MODIFIED_FAILED
** MODIFIED_FAILED_UNDELIVERABLE | Controls the outcome to apply to a message that is rejected due to exceeding the configured maxRedeliveries value. |  MODIFIED_FAILED_UNDELIVERABLE |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy.  | `true` |
|===
[[config_windows]]
===== Windows


====== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Skip connectivity test a| Boolean |  (Optional) Skips the connectivity test at connector startup (use this if your access policy is restricted). |  false |
| Max Connections a| Number |  Maximum number of connections to keep in pool for the producer to reuse. If set to `-1`, a new connection is created every time. |  -1 |
| Caching Strategy a| One of:

* no-caching
* <<default-caching>> |  The strategy to use for caching sessions and connections |  |
| Service Namespace a| String | Namespace for the Azure Service Bus service in your subscription. |  | x
| Username a| String | Username used for authentication. |  | x
| Password a| String | Password used for authentication. |  | x
| Fully Qualified Domain Name a| String | Fully qualified domain name of your Windows Service Bus server. |  | x
| Port a| String | Server port number. |  9355 |
| Disable SSL certificate validation a| Boolean | Set to `true` when using a self-signed SSL certificate. |  false |
| Idle timeout a| Number |  The idle timeout in milliseconds after which the connection fails if the peer sends no AMQP frames. |  60000 |
| Proxy a| <<Proxy>> | Points to the <<Proxy>> type. |  |
| Security a| <<Tls>> | Points to the <<Tls>> type. |  |
| Advanced a| <<Advanced>> | Points to the <<Advanced>> type. |  |
| Max redeliveries a| Number |  Controls when an incoming message is rejected based on the number of times it was redelivered. The default value is -1 (disabled). A value of `0` means that no message redeliveries are accepted. A value of `5` means that a message is redelivered five times, and so forth. |  -1 |
| Outcome a| Enumeration, one of:

** ACCEPTED
** REJECTED
** RELEASED
** MODIFIED_FAILED
** MODIFIED_FAILED_UNDELIVERABLE |  Controls the outcome to apply to a message that is rejected due to exceeding the configured maxRedeliveries value. |  MODIFIED_FAILED_UNDELIVERABLE |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy.  | `true` |
|===

== Associated Operations

* <<ack>>
* <<queueCreate>>
* <<queueDelete>>
* <<queueGet>>
* <<queueSend>>
* <<queueUpdate>>
* <<queues>>
* <<recoverSession>>
* <<ruleCreate>>
* <<ruleDelete>>
* <<ruleGet>>
* <<ruleUpdate>>
* <<rules>>
* <<subscriptionCreate>>
* <<subscriptionDelete>>
* <<subscriptionGet>>
* <<subscriptionUpdate>>
* <<subscriptions>>
* <<topicCreate>>
* <<topicDelete>>
* <<topicGet>>
* <<topicSend>>
* <<topicUpdate>>
* <<topics>>

== Associated Sources

* <<listener>>


== Operations

[[ack]]
=== Ack
`<servicebus:ack>`


Allows the user to perform an ACK when the JmsAckMode#MANUAL mode is elected while consuming the Message. As per JMS Spec, performing an ACK over a single Message automatically works as an ACK for all the Messages produced in the same JmsSession.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| Ack Id a| String |  The AckId of the Message to ACK |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[queueCreate]]
=== Queue Create
`<servicebus:queue-create>`


Creates a queue in the service bus instance


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| Queue Path a| String |  The name of the queue |  | x
| Queue Description a| <<ServiceBusQueueDescription>> |  An InternalQueueDescription object containing the desired values of the queue's properties to create |  `#[payload]` |
| Target Variable a| String | Name of a variable that stores the operation's output |  |
| Target Value a| String | An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<ServiceBusQueue>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[queueDelete]]
=== Queue Delete
`<servicebus:queue-delete>`


Deletes the specified queue in the service bus instance


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| Queue Path a| String |  Name of the queue |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  Retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[queueGet]]
=== Queue Get
`<servicebus:queue-get>`


This operation retrieves the specified queue from the Service Bus instance.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| Queue Path a| String |  Name of the queue |  `#[payload]` |
| Target Variable a| String | Name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  Retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<ServiceBusQueue>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[queueSend]]
=== Queue Send
`<servicebus:queue-send>`


This operation sends a message to a queue.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Destination Queue a| String |  The name of the queue. |  | x
| Transactional Action a| Enumeration, one of:

** ALWAYS_JOIN
** JOIN_IF_POSSIBLE
** NOT_SUPPORTED |  Type of transactional action. |  NOT_SUPPORTED |
| Send Correlation Id a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Correlation strategy id for operation. |  AUTO |
| Body a| Any |  The body of the Message |  `#[payload]` |
| JMS Type a| String |  The JMSType identifier header of the Message |  |
| Correlation ID a| String |  The JMSCorrelationID header of the Message |  |
| Send Content Type a| Boolean |  Whether or not the body content type should be sent as a property |  true |
| Content Type a| String |  The content type of the message's body |  |
| Send Encoding a| Boolean |  Whether or not the body outboundEncoding should be sent as a Message property |  true |
| Encoding a| String |  The encoding of the message's body |  |
| Reply To a| <<ServiceBusJmsDestination>> |  The destination where a reply to this Message should be sent |  |
| User Properties a| Object |  The custom user properties to set for this message |  |
| JMSX Properties a| <<JmsxProperties>> |  The JMSX properties to set for this message |  |
| Persistent Delivery a| Boolean |  If true, the Message is sent using the PERSISTENT JMSDeliveryMode. |  |
| Priority a| Number |  The default JMSPriority value to use when sending the message. |  |
| Time To Live a| Number |  Defines the default time the message is in the broker before it expires and is discarded. |  |
| Time To Live Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the timeToLive configurations. |  |
| Disable Message Id a| Boolean |  If true, flags the message to avoid generating its MessageID. |  |
| Disable Message Timestamp a| Boolean |  If true, flags the message to avoid generating its sent Timestamp. |  |
| Delivery Delay a| Number |  Only used by JMS 2.0. Sets the delivery delay to apply to postpone the message delivery. |  |
| Delivery Delay Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the deliveryDelay configurations. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[queueUpdate]]
=== Queue Update
`<servicebus:queue-update>`


This operation updates the specified queue in the Service Bus instance.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Queue Path a| String |  The name of the queue |  | x
| Queue Description a| <<ServiceBusQueueDescription>> |  An InternalQueueDescription oject containing the desired values of the queue's properties that will be updated |  `#[payload]` |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<ServiceBusQueue>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[queues]]
=== Queues
`<servicebus:queues>`


This operation retrieves all existing queues from the Service Bus instance.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of <<ServiceBusQueue>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[recoverSession]]
=== Recover Session
`<servicebus:recover-session>`


Allows the user to recover a session when the JmsAckMode#MANUAL mode is elected while consuming the message. Per the JMS Spec, performing a session recover automatically redelivers all the consumed messages that were not acknowledged before the recover.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| Ack Id a| String |  The AckId of the Message Session to recover |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  Retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[ruleCreate]]
=== Rule Create
`<servicebus:rule-create>`


This operation creates a rule for the specified topic and subscription.

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| Rule Path a| String | Name of the rule to create |  | x
| Rule Description a| <<ServiceBusRuleDescription>> |  An InternalRuleDescription object containing the desired values of the new rule's properties |  `#[payload]` |
| Topic Path a| String | Name of the topic that contains the subscription for which to create a rule  |  | x
| Subscription Path a| String | Name of the subscription that contains the new rule  |  |
| Target Variable a| String | Name of a variable that stores the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<ServiceBusRule>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[ruleDelete]]
=== Rule Delete
`<servicebus:rule-delete>`


This operation deletes a rule from the specified topic and subscription.

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| Topic Path a| String | Name of the topic that contains the subscription from which to delete the rule |  | x
| Subscription Path a| String | Name of the subscription from which to delete the rule |  | x
| Rule Path a| String | Name of the rule to delete |  | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  Retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[ruleGet]]
=== Rule Get
`<servicebus:rule-get>`


This operation retrieves a rule from the specified topic and subscription.

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| Topic Path a| String | Name of the topic that contains the subscription from which to retrieve the rule || x
| Subscription Path a| String | Name of the subscription from which to retrieve the rule |  | x
| Rule Path a| String | Name of the rule to retrieve |  | x
| Target Variable a| String | Name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<ServiceBusRule>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[ruleUpdate]]
=== Rule Update
`<servicebus:rule-update>`


This operation updates a rule from the specified topic and subscription.

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| Rule Description a| <<ServiceBusRuleDescription>> |  An InternalRuleDescription object containing the desired values for the rule's updated properties |  `#[payload]` |
| Topic Path a| String | The name of the topic that contains the subscription for which to update the rule |  | x
| Subscription Path a| String | The name of the subscription for which to update the rule |  | x
| Rule Path a| String | The name of the rule to update |  | x
| Target Variable a| String |  The name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<ServiceBusRule>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[rules]]
=== Rules
`<servicebus:rules>`


Retrieves all rules from the specified topic and subscription

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| Topic Path a| String | The name of the topic that contains the subscription from which to retrieve all rules |  | x
| Subscription Path a| String | The name of the subscription from which to retrieve all rules |  |
| Target Variable a| String |  The name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of <<ServiceBusRule>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[subscriptionCreate]]
=== Subscription Create
`<servicebus:subscription-create>`


Creates a subscription in the specified topic


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| Topic Path a| String |  The name of the topic to contain the new subscription |  | x
| Subscription Path a| String |  The name of the subscription to create |  | x
| Subscription Description a| <<ServiceBusSubscriptionDescription>> |  An InternalSubscriptionDescription object containing the desired values of the new subscription's properties |  `#[payload]` |
| Target Variable a| String |  The name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<ServiceBusSubscription>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[subscriptionDelete]]
=== Subscription Delete
`<servicebus:subscription-delete>`


Deletes a subscription from the specified topic

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| Topic Path a| String | The name of the topic from which to delete the subscription |  | x
| Subscription Path a| String | The name of the subscription to delete |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[subscriptionGet]]
=== Subscription Get
`<servicebus:subscription-get>`


Retrieves a subscription from the specified topic


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use
 | | x
| Topic Path a| String | The name of the topic from which to retrieve the subscription
 |  | x
| Subscription Path a| String | The name of the subscription to retrieve |  |
| Target Variable a| String |  The name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<ServiceBusSubscription>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[subscriptionUpdate]]
=== Subscription Update
`<servicebus:subscription-update>`


Updates a subscription from the specified topic


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| Subscription Description a| <<ServiceBusSubscriptionDescription>> |  An InternalSubscriptionDescription object containing the desired values of the subscription's updated properties|  `#[payload]` |
| Topic Path a| String | The name of the topic from which to update the subscription |  | x
| Subscription Path a| String | The name of the subscription to update |  |
| Target Variable a| String |  The name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<ServiceBusSubscription>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[subscriptions]]
=== Subscriptions
`<servicebus:subscriptions>`


Retrieves all subscriptions from the specified topic

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| Topic Path a| String |  The name of the topic from which to retrieve all subscriptions |  `#[payload]` |
| Target Variable a| String |  The name of a variable that stores the operation's output |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of <<ServiceBusSubscription>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[topicCreate]]
=== Topic Create
`<servicebus:topic-create>`


Creates a topic in the service bus instance


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Topic Path a| String |  The name of the topic |  | x
| Topic Description a| <<ServiceBusTopicDescription>> |  An InternalTopicDescription object containing the desired values of the topic's properties that will be created. |  `#[payload]` |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<ServiceBusTopic>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[topicDelete]]
=== Topic Delete
`<servicebus:topic-delete>`


Deletes the specified topic from the service bus instance


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Topic Path a| String |  The name of the topic |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[topicGet]]
=== Topic Get
`<servicebus:topic-get>`


Retrieves the specified topic from the service bus instance


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Topic Path a| String |  The name of the topic |  `#[payload]` |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<ServiceBusTopic>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[topicSend]]
=== Topic Send
`<servicebus:topic-send>`


Sends a message to a Topic


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Destination Topic a| String |  The name of the topic. |  | x
| Transactional Action a| Enumeration, one of:

** ALWAYS_JOIN
** JOIN_IF_POSSIBLE
** NOT_SUPPORTED |  Type of transactional action. |  | x
| Send Correlation Id a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Correlation strategy id for operation. |  | x
| Body a| Any |  The body of the Message |  `#[payload]` |
| JMS Type a| String |  The JMSType identifier header of the Message |  |
| Correlation ID a| String |  The JMSCorrelationID header of the Message |  |
| Send Content Type a| Boolean |  Whether or not the body content type should be sent as a property |  true |
| Content Type a| String |  The content type of the message's body |  |
| Send Encoding a| Boolean |  Whether or not the body outboundEncoding should be sent as a Message property |  true |
| Encoding a| String |  The encoding of the message's body |  |
| Reply To a| <<ServiceBusJmsDestination>> |  The destination where a reply to this Message should be sent |  |
| User Properties a| Object |  The custom user properties to set for this message |  |
| JMSX Properties a| <<JmsxProperties>> |  The JMSX properties to set for this message |  |
| Persistent Delivery a| Boolean |  If true, the Message is sent using the PERSISTENT JMSDeliveryMode. |  |
| Priority a| Number |  The default JMSPriority value to use when sending the message. |  |
| Time To Live a| Number |  Defines the default time the message is in the broker before it expires and is discarded. |  |
| Time To Live Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the timeToLive configurations. |  |
| Disable Message Id a| Boolean |  If true, flags the message to avoid generating its MessageID. |  |
| Disable Message Timestamp a| Boolean |  If true, flags the message to avoid generating its sent Timestamp. |  |
| Delivery Delay a| Number |  Only used by JMS 2.0. Sets the delivery delay to apply to postpone the message delivery. |  |
| Delivery Delay Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the deliveryDelay configurations. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[topicUpdate]]
=== Topic Update
`<servicebus:topic-update>`

Updates the specified topic from the service bus instance

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Topic Path a| String |  The name of the topic |  | x
| Topic Description a| <<ServiceBusTopicDescription>> |  An InternalTopicDescription object containing the desired values of the topic's properties that will be updated. |  `#[payload]` |
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<ServiceBusTopic>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


[[topics]]
=== Topics
`<servicebus:topics>`

Retrieves all existing topics from the service bus instance


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Target Variable a| String |  The name of a variable that stores the operation's output. |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of <<ServiceBusTopic>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICEBUS:INVALID_TOKEN
* SERVICEBUS:RETRY_EXHAUSTED
* SERVICEBUS:CONNECTION_EXCEPTION
* SERVICEBUS:UNKNOWN
* SERVICEBUS:AMQP_ERROR
* SERVICEBUS:CONNECTIVITY
* SERVICEBUS:REST_ERROR


== Sources

[[listener]]
=== Listener
`<servicebus:listener>`


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Ack Mode a| Enumeration, one of:

** IMMEDIATE
** AUTO
** MANUAL
** DUPS_OK |  The Session ACK mode to use when consuming a message |  |
| Number Of Consumers a| Number |  The number of concurrent consumers to use to receive JMS Messages |  1 |
| Primary Node Only a| Boolean |  Whether this source should be executed only on the primary node when running in a cluster |  |
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message |  |
| Source Type a| String | Indicates whether to retrieve messages from a queue or topic. |  | x
| Destination a| String | Name of the destination queue, topic, or custom destination type from which to retrieve messages. |  | x
| Subscription a| String | Name of the subscription used when subscribing to topics. If the destination is a queue, select `NONE`. |  | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
| Body a| Any |  The body of the Message |  `#[payload]` |
| JMS Type a| String |  The JMSType identifier header of the Message |  |
| Correlation ID a| String |  The JMSCorrelationID header of the Message |  |
| Send Content Type a| Boolean |  Whether or not the body content type should be sent as a property |  true |
| Content Type a| String |  Content type of the message body. |  |
| Send Encoding a| Boolean |  Whether or not the body outboundEncoding should be sent as a Message property |  true |
| Encoding a| String |  Encoding of the message body. |  |
| Reply To a| <<ServiceBusJmsDestination>> |  The destination where a reply to this Message should be sent |  |
| User Properties a| Object |  The custom user properties to set for this message |  |
| JMSX Properties a| <<JmsxProperties>> |  The JMSX properties to set for this message |  |
| Persistent Delivery a| Boolean |  Whether or not the delivery should be done with a persistent configuration |  |
| Priority a| Number |  The default JMSPriority value to use when sending the message |  |
| Time To Live a| Number |  Defines the default time the message is in the broker before it expires and is discarded |  |
| Time To Live Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the timeToLive configurations |  |
| Disable Message Id a| Boolean |  If true, flags the message to avoid generating its MessageID |  |
| Disable Message Timestamp a| Boolean |  If true, flags the message to avoid generating its sent Timestamp |  |
| Delivery Delay a| Number |  Only used by JMS 2.0. Sets the delivery delay to apply to postpone the message delivery. |  |
| Delivery Delay Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the deliveryDelay configurations |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Message
| Attributes Type a| <<ServiceBusJmsAttributes>>
|===

=== For Configurations
* <<config>>



== Types

[[Proxy]]
=== Proxy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Host a| String | Hostname or IP address of the proxy server. |  |
| Port a| String | Port of the proxy server. |  |
| Username a| String | Username to authenticate against the proxy server. |  |
| Password a| String | Password to authenticate against the proxy server. |  |
|===

[[Advanced]]
=== Advanced

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Name | Type | Description | Default Value | Required
| Read Timeout a| Number |  How long a client waits for a response before timing out. `0` specifies that the client waits indefinitely. |  60000 |
| Read Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Read Timeout* field. |  MILLISECONDS |
| Connection Timeout a| Number |  How long the connector waits before timing out when establishing a connection to the remote service. |  60000 |
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Connection Timeout* field. |  MILLISECONDS | | | |
|===

[[Tls]]
=== TLS

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | Comma-separated list of protocols enabled for this context. |  |
| Enabled Cipher Suites a| String | Comma-separated list of cipher suites enabled for this context. |  |
| Trust Store a| <<TrustStore>> | Configures the TLS truststore. |  |
| Key Store a| <<KeyStore>> | Configures the TLS keystore. |  |
| Revocation Check a| * <<standard-revocation-check>>
* <<custom-ocsp-responder>>
* <<crl-file>> | Configures a revocation checking mechanism. |  |
|===

[[TrustStore]]
=== Truststore

Configures the truststore for TLS.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the truststore. Mule resolves the path relative to the current classpath and file system, if possible. |  |
| Password a| String | Password used to protect the truststore. |  |
| Type a| String | Type of truststore. |  |
| Algorithm a| String | Encryption algorithm that the truststore uses. |  |
| Insecure a| Boolean | If `true`, Mule stops performing certificate validations. Setting this to `true` can make connections vulnerable to attacks. |  |
|===

[[KeyStore]]
=== Keystore

Configures the keystore for the TLS protocol. The keystore you generate contains a private key and a public certificate.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the keystore. Mule resolves the path relative to the current classpath and file system, if possible. |  |
| Type a| String | Type of store used. |  |
| Alias a| String | Alias of the key to use when the keystore contains multiple private keys. By default, Mule uses the first key in the file. |  |
| Key Password a| String | Password used to protect the private key. |  |
| Password a| String | Password used to protect the keystore. |  |
| Algorithm a| String | Encryption algorithm that the keystore uses. |  |
|===

[[standard-revocation-check]]
=== Standard Revocation Check

Configures standard revocation checks for TLS certificates.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Which elements to verify in the certificate chain:

* `true`

Verify only the last element in the certificate chain.

* `false`

Verify all elements in the certificate chain. |  |
| Prefer Crls a| Boolean | How to check certificate validity:

* `true`

Check the Certification Revocation List (CRL) for certificate validity.

* `false`

Use the Online Certificate Status Protocol (OCSP) to check certificate validity. |  |
| No Fallback a| Boolean | Whether to use the secondary method to check certificate validity:

* `true`

Use the method that wasn't specified in the *Prefer Crls* field (the secondary method)  to check certificate validity.

* `false`

Do not use the secondary method to check certificate validity. |  |
| Soft Fail a| Boolean | What to do if the revocation server can't be reached or is busy:

* `true`

Avoid verification failure.

* `false`

Allow the verification to fail. |  |
|===


[[Reconnection]]
=== Reconnection

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use. |  |
|===

[[reconnect]]
=== Reconnect

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| Count a| Number | How many reconnection attempts to make. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  |
|===

[[ServiceBusJmsAttributes]]
=== Service Bus JMS Attributes

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Properties a| <<JmsMessageProperties>> | Container element for all the properties present in a JMS Message. |  | x
| Headers a| <<JmsHeaders>> | All the possible headers of a JMS message. |  | x
| Ack Id a| String | Session ackID that acknowledges the current message if available. If not, the ackID is null. |  |
|===

[[JmsMessageProperties]]
=== JMS Message Properties

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| All a| Object | All the properties of the JMS message as a flattened map. |  | x
| User Properties a| Object | User-provided properties of the JMS message. |  | x
| Jms Properties a| Object | JMS message broker and provider properties. |  | x
| Jmsx Properties a| <<JmsxProperties>> | JMSX properties of the JMS message. |  | x
|===

[[JmsxProperties]]
=== JMSX Properties

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Jmsx User ID a| String | User identity that sends the message. |  |
| Jmsx App ID a| String | Identity of the application that sends the message. |  |
| Jmsx Delivery Count a| Number | Number of message delivery attempts. |  |
| Jmsx Group ID a| String | Message group identity of the message. |  |
| Jmsx Group Seq a| Number | Sequence number of the message in the group. |  |
| Jmsx Producer TXID a| String | Identifier of the transaction that produced the message. |  |
| Jmsx Consumer TXID a| String | Identifier of the transaction that consumed the message. |  |
| Jmsx Rcv Timestamp a| Number | The time JMS delivered the message to the consumer. |  |
|===

[[JmsHeaders]]
=== JMS Headers

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Destination a| <<ServiceBusJmsDestination>> | Destination of the sent message. |  | x
| Delivery Mode a| Number | Delivery mode of the message. |  | x
| Expiration a| Number | Expiration time of the message, expressed in number of milliseconds elapsed since midnight January 1, 1970, UTC. If set to `0`, the message does not expire. |  | x
| Priority a| Number | Priority of the message, from 0-9. Higher numbers signify a higher priority. |  | x
| Message Id a| String | Unique ID of the message. |  |
| Timestamp a| Number | Time a message is handed to a JMS provider to be sent, expressed in number of milliseconds elapsed since midnight January 1, 1970, UTC. |  | x
| Correlation Id a| String | JMSCorrelationID header of the message. |  |
| Reply To a| <<ServiceBusJmsDestination>> | Destination of where a reply to this message is sent. |  |
| Type a| String | Type of this destination. |  | x
| Redelivered a| Boolean | Set to `true` when the JMS provider has delivered the message at least once before. | false |
| Delivery Time a| Number | Time the message is delivered. |  |
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | The maximum number of times a message can be redelivered and processed unsuccessfully before triggering process-failed-message |  |
| Use Secure Hash a| Boolean | Whether to use a secure hash algorithm to identify a redelivered message. |  |
| Message Digest Algorithm a| String | The secure hashing algorithm to use. | SHA-256 |
| Id Expression a| String | Defines one or more expressions used to determine when a message has been redelivered. This property can be set only when useSecureHash is false. |  |
| Object Store a| Object Store | The object store where the redelivery counter for each message is going to be stored. |  |
|===

[[ServiceBusJmsDestination]]
=== Service Bus JMS Destination

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Destination a| String | Name that identifies the destination of where to send a reply to the message. |  | x
| Destination Type a| Enumeration, one of:

** QUEUE
** TOPIC | Type of this destination. | QUEUE |
|===

[[ServiceBusQueue]]
=== Service Bus Queue

The queue is represented by an object containing the following fields:

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Author a| String | Author of the ServiceBusQueue object. |  |
| Id a| String | Unique identifier of the ServiceBusQueue object. |  |
| Link a| String | Link of the ServiceBusQueue object. |  |
| Published a| Date | Date when the ServiceBusQueue object is published, expressed in number of milliseconds elapsed since midnight January 1, 1970, UTC. |  |
| Queue Description a| <<ServiceBusQueueDescription>> | ServiceBusQueueDescription object containing the desired values of the queue’s properties that is created. |  |
| Title a| String | Title of the ServiceBusQueue object. |  |
| Updated a| Date | Date when the ServiceBusQueue object is updated, expressed in number of milliseconds elapsed since midnight January 1, 1970, UTC.  |  |
|===

[[ServiceBusQueueDescription]]
=== Service Bus Queue Description

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Lock Duration a| String | Determines the amount of time in seconds in which a message should be locked for processing by a receiver. After this period, the message is unlocked and available for
 consumption by the next receiver. Settable only at queue creation time. Valid values: Range: 0 - 5 minutes. 0 means that the message is not locked. Format: PTx3Mx4S, where
 x1 number of days, x2 number of hours, x3 number of minutes, x4 number of seconds (Examples: PT5M (5 minutes), PT1M30S (1 minute, 30 seconds)). | PT1M |
| Max Size In Megabytes a| Number | Specifies the maximum queue size in megabytes. Any attempt to enqueue a message that causes the queue to exceed this value fails. Valid values are: 1024, 2048, 3072, 4096, 5120 | 1024 |
| Requires Duplicate Detection a| Boolean | Settable only at queue creation time. | false |
| Requires Session a| Boolean | Settable only at queue creation time. If set to true, the queue will be session-aware and only SessionReceiver will be supported. Session-aware queues are not supported
 through REST. | false |
| Dead Lettering On Message Expiration a| Boolean | This field controls how the Service Bus handles a message with an expired TTL. If it is enabled and a message expires, Service Bus moves the message from the queue into the
 queue's dead-letter sub-queue. If disabled, message is permanently deleted from the queue. Settable only at queue creation time. | false |
| Enable Batched Operations a| Boolean | Enables or disables service-side batching behavior when performing operations for the specific queue. When enabled, Service Bus collects or batches multiple operations to the
 back end, to be more efficient with the connection. If you want lower operation latency, you can disable this feature. | true |
| Default Message Time To Live a| String | Depending on whether DeadLettering is enabled, a message is automatically moved to the DeadLetterQueue or deleted if it has been stored in the queue for longer than the
 specified time. This value is overwritten by a TTL specified on the message if and only if the message TTL is smaller than the TTL set on the queue. This value is immutable
 after the queue has been created. Format: Px1DTx2Hx3Mx4S, where x1 number of days, x2 number of hours, x3 number of minutes, x4 number of seconds (Examples: PT10M (10 minutes), P1DT2H (1 day, 2 hours) | P10675199DT2H48M5.4775807S |
| Duplicate Detection History Time Window a| String | Specifies the time span during which Service Bus detects message duplication Valid values: Range: 1 second - 7 days. Format: Px1DTx2Hx3Mx4S, where x1 number of days, x2
 number of hours, x3 number of minutes, x4 number of seconds (Examples: PT10M (10 minutes), P1DT2H (1 day, 2 hours)). | PT10M |
| Max Delivery Count a| Number | The maximum number of times Service Bus tries to deliver a message before being dead-lettered or discarded. | 10 |
|===

[[ServiceBusRule]]
=== Service Bus Rule

Represents a rule for processing messages. Service Bus matches messages with the filter represented by its `Filter` property and performs actions represented by its `Action` property, against the messages that match the filter.

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Id a| String | Unique identifier of the ServiceBusRule object. |  |
| Link a| String | Link of the ServiceBusRule object. |  |
| Published a| Date | Date when the ServiceBusRule object is published, expressed in number of milliseconds elapsed since midnight January 1, 1970, UTC. |  |
| Rule Description a| <<ServiceBusRuleDescription>> | ServiceBusRuleDescription object containing the desired values of the properties of the rule that is created. |  |
| Title a| String | Title of the ServiceBusRule object. |  |
| Updated a| Date | Date when the ServiceBusRule object is updated, expressed in number of milliseconds elapsed since midnight January 1, 1970, UTC.  |  |
|===

[[ServiceBusRuleDescription]]
=== Service Bus Rule Description

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Action a| <<ServiceBusRuleAction>> | The action that the rule performs |  |
| Filter a| <<ServiceBusRuleFilter>> | The filter for the associated subscription |  |
|===

[[ServiceBusRuleAction]]
=== Service Bus Rule Action

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Sql Expression a| String | The SQL expression for the action to perform |  |
| Type a| Enumeration, one of:

* SqlRuleAction

A type of FilterAction that represents an SQL expression.

* EmptyRuleAction

A type of FilterAction that represents an empty action. | Type of the ServiceBusRuleAction object. |  |
|===

[[ServiceBusRuleFilter]]
=== Service Bus Rule Filter

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Correlation Id a| String | The ID to match if this filter is a correlation filter |  |
| Sql Expression a| String | The SQL expression for the action to perform |  |
| Type a| Enumeration, one of:

* SqlFilter

A type of filter that represents an SQL expression.

* TrueFilter

Shortcut for returning `true`. It is a type of SqlFilter.

* FalseFilter

Shortcut for returning `false`. It is a type of SqlFilter.

* CorrelationFilter

A type of filter that matches the correlationId property of BrokeredMessage. | Type of the ServiceBusRuleFilter object. |  |
|===

[[ServiceBusSubscription]]
=== Service Bus Subscription

The subscription is represented by an object containing the following fields:

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Id a| String | Unique identifier of the ServiceBusSubscription object. |  |
| Link a| String | Link of the ServiceBusSubscription object. |  |
| Published a| Date | Date when the ServiceBusSubscription object is published, expressed in number of milliseconds elapsed since midnight January 1, 1970, UTC. |  |
| Subscription Description a| <<ServiceBusSubscriptionDescription>> | ServiceBusSubscriptionDescription object containing the desired values of the properties of the subscription that is created. |  |
| Title a| String | Title of the ServiceBusSubscription object. |  |
| Updated a| Date | Date when the ServiceBusSubscription object is updated, expressed in number of milliseconds elapsed since midnight January 1, 1970, UTC.  |  |
|===

[[ServiceBusSubscriptionDescription]]
=== Service Bus Subscription Description

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Lock Duration a| String | The default lock duration is applied to subscriptions that do not define a lock duration. You can only set this property at subscription creation time. Valid values: Range:
 0 - 5 minutes. 0 means that the message is not locked. Format: PTx3Mx4S, where x1 number of days, x2 number of hours, x3 number of minutes, x4 number of seconds (Examples:
 PT5M (5 minutes), PT1M30S (1 minute, 30 seconds)). | PT1M |
| Requires Session a| Boolean | You can only set this property at subscription creation time. If set to true, the subscription will be session-aware and only SessionReceiver will be supported.
 Session-aware subscriptions are not supported through REST. | false |
| Dead Lettering On Message Expiration a| Boolean | This field controls how Service Bus handles a message with an expired TTL. If it is enabled and a message expires, Service Bus moves the message from the queue into the
 subscription's dead-letter sub-queue. If disabled, message is permanently deleted from the subscription's main queue. Settable only at subscription creation time. | false |
| Dead Lettering On Filter Evaluation Exceptions a| Boolean | Determines how Service Bus handles a message that causes an exception during a subscription's filter evaluation. If the value is set to true, the message that caused the
 exception is moved to the subscription's dead-letter queue. Otherwise, it is discarded. By default, this parameter is set to true, enabling you to investigate the cause of
 the exception. It can occur from a malformed message or some incorrect assumptions being made in the filter about the form of the message. Settable only at subscription
 creation time. | false |
| Enable Batched Operations a| Boolean | Enables or disables service-side batching behavior when performing operations for the specific queue. When enabled, Service Bus will collect/batch multiple operations to the
 backend to be more connection efficient. If you want lower operation latency, then you can disable this feature. | false |
| Default Message Time To Live a| String | Determines how long a message lives in the subscription. Based on whether dead-lettering is enabled, a message whose Time To Live (TTL) has expired is either moved to the
 subscription's associated DeadLetterQueue, or permanently deleted. If the topic specifies a smaller TTL than the subscription, the topic TTL is applied. Format:
 Px1DTx2Hx3Mx4S, where x1 number of days, x2 number of hours, x3 number of minutes, x4 number of seconds (Examples: PT10M (10 minutes), P1DT2H (1 day, 2 hours) | P10675199DT2H48M5.4775807S |
| Max Delivery Count a| Number | The maximum number of times Service Bus tries to deliver a message before that message is dead lettered or discarded. | 10 |
|===

[[ServiceBusTopic]]
=== Service Bus Topic

The topic is represented by an object containing the following fields:


[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Author a| String | Author of the ServiceBusTopic object. |  |
| Id a| String | Unique identifier of the ServiceBusTopic object. |  |
| Link a| String | Link of the ServiceBusTopic object. |  |
| Published a| Date | Date when the ServiceBusTopic object is published, expressed in number of milliseconds elapsed since midnight January 1, 1970, UTC. |  |
| Title a| String | Title of the ServiceBusTopic object. |  |
| Topic Description a| <<ServiceBusTopicDescription>> | ServiceBusTopicDescription object containing the desired values of the properties of the topic that is created. |  |
| Updated a| Date | Date when the ServiceBusTopic object is updated, expressed in number of milliseconds elapsed since midnight January 1, 1970, UTC.  |  |
|===

[[ServiceBusTopicDescription]]
=== Service Bus Topic Description

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Size In Megabytes a| Number | Specifies the maximum queue size in megabytes. Any attempt to enqueue a message that will cause the queue to exceed this value fails. Valid values are: 1024, 2048, 3072,
 4096, 5120 | 1024 |
| Requires Duplicate Detection a| Boolean | If enabled, the topic detects duplicate messages within the time span specified by the DuplicateDetectionHistoryTimeWindow property. Settable only at topic creation time. | false |
| Enable Batched Operations a| Boolean | Enables or disables service side batching behavior when performing operations for the specific queue. When enabled, Service Bus collects/batches multiple operations to the
 back end to be more connection efficient. If you want lower operation latency, you can disable this feature. | true |
| Default Message Time To Live a| String | Determines how long a message lives in the associated subscriptions. Subscriptions inherit the TTL from the topic unless they are created explicitly with a smaller TTL.
 Based on whether dead-lettering is enabled, a message whose TTL has expired will either be moved to the subscription's associated DeadLetterQueue or will be permanently
 deleted. Format: Px1DTx2Hx3Mx4S, where x1 number of days, x2 number of hours, x3 number of minutes, x4 number of seconds (Examples: PT10M (10 minutes), P1DT2H (1 day, 2 hours)). | P10675199DT2H48M5.4775807S |
| Duplicate Detection History Time Window a| String | Specifies the time span during which Service Bus detects message duplication Valid values: Range: 1 second - 7 days. Format: Px1DTx2Hx3Mx4S, where x1 number of days, x2
 number of hours, x3 number of minutes, x4 number of seconds (Examples: PT10M (10 minutes), P1DT2H (1 day, 2 hours)). | PT10M |
|===

[[default-caching]]
=== Default Caching

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Session Cache Size a| Number | Number of sessions to cache. |  |
| Cache Producers a| Boolean | true if the ConnectionFactory should cache the MessageProducers | true |
| Cache Consumers a| Boolean | true if the ConnectionFactory should cache the MessageConsumers | true |
|===

[[topic-consumer]]
=== Topic Consumer

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Topic Consumer a| <<topic-consumer>> | Points to the <<topic-consumer>> type. |  | x
| Topic Subscription a| <<TopicSubscription>> | Points to the <<TopicSubscription>> type. |  | x
|===

[[TopicSubscription]]
=== Topic Subscription

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Topic Path a| String | Name of the topic where the subscription is created. |  | x
| Subscription Path a| String | Name of the subscription that is created. |  |
|===

[[ServiceBusQueueConsumer]]
=== Service Bus Queue Consumer

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Queue Consumer a| queue-consumer | ConsumerType that marks the consumed destination as a queue. |  |
| Source Queue a| String | Queue that receives events. |  |
| Number Of Consumers a| Number | The number of concurrent consumers to use to receive JMS Messages | 4 |
|===

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
